# ia-recruitment

./: .env.example  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  agentos.py  docker-compose.yml  pyproject.toml  start.sh
.claude/: settings.local.json
agent-ui/: Dockerfile  next.config.ts  tailwind.config.ts
agent-ui/src/app/: page.tsx
agents/: recruitment_agent.py
alembic/: env.py
alembic/versions/: 88ce4f0e2aeb_initial_schema.py  a224f17b2382_add_interviewers_table.py
db/: engine.py
db/models/: candidate.py  interview.py  interviewer.py  job_opening.py  process.py
db/repositories/: candidate.py  interview.py  interviewer.py  job_opening.py  process.py
docs/: agno-vs-langchain.md  architecture.html  layers.html  manifesto-mcp.json  postman-collection.json  uml-classes.html  uml-components.html  use-cases.html
schemas/: candidate.py  job_opening.py  process.py  scheduling.py
scripts/: seed.py  start-agentos.sh  start-candidate-screening.sh  start-job-opening.sh  start-migrate.sh  start-orchestrator.sh  start-process-management.sh  start-scheduling.sh
services/: candidate_screening.py  interview_scheduling.py  job_opening.py  process_management.py
tests/: test_mcp_protocol.py
tests/services/: test_job_opening.py  test_process_management.py
tests/tools/: test_job_opening_server.py  test_process_management_server.py
tools/: candidate_screening_server.py  interview_scheduling_server.py  job_opening_server.py  process_management_server.py  recruitment_orchestrator_server.py
utils/: config.py  exceptions.py  logging.py
(+24 files in other folders)
